# pchip-os

./: .gitignore  Cargo.toml  Makefile  README.md  bram_mem_15_0  bram_mem_31_16  bram_mem_47_32  bram_mem_63_48
.cargo/: config.toml
src/: allocator.rs  asm.rs  assembly.rs  axi_uart_lite.rs  main.rs  process.rs  shell.rs  syscall.rs  trap.rs  uart.rs  virt_uart.rs  xmodem.rs
src/allocator/: bump.rs
src/asm/: boot.S  trap.S
src/lds/: pchip.lds  virt.lds
src/uart/: axi_uart_lite.rs  virt_uart.rs
